Fixed font, spacing and ch. Outline

--- a/css-assessment/_stylesheet-variables.scss
+++ b/css-assessment/_stylesheet-variables.scss
@@ -1,13 +1,13 @@
-/*FONT IMPORTS: IBM Plex Sans, Muli*/
+/*FONT IMPORTS: IBM Plex Sans, Muli, PT Serif*/
 @import url(https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,400,500,700&display=swap&subset=latin,latin-ext);
 @import url(https://fonts.googleapis.com/css?family=Muli:400,700,900&display=swap&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap);
 
 /*Fonts*/
 
 $font-default: "IBM Plex Sans", sans-serif; 
 $font-alt-sans: "Muli", sans-serif;
-$font-alt-serif: "Noto Serif", serif;
+$font-alt-serif: "PT Serif", serif;
 
 /*Colors*/
 
